--- a/Labs/Lab8/readme
+++ b/Labs/Lab8/readme
@@ -1,5 +1,5 @@
 /************************************************************************
- Design Unit  : Lab7
+ Design Unit  : Lab9
 
  File Name    : readme
 
@@ -23,6 +23,7 @@
  Revision List
  Version      Author  Date    Changes
  1.0          DB      Nov 04  New version
+ 1.1          DB      Nov 10  Modified BFS with function call
 *************************************************************************/
 
 To construct the files for the graph, Lab7, you can use the following options
@@ -31,26 +32,26 @@ To construct the files for the graph, Lab7, you can use the following options
 
 To run the executable, type "./testapp".
 
-Your menu options will be
-   "Enter F to read a graph from a file,"
-   "   or A to add an edge,"
-   "   or R to remove an edge,"
-   "   or L to list the neighbours of a vertex,"
-   "   or S to search the graph from a vertex,"
-   "   or D to for debug data display,"
-   "   or P to for Vertex display,"
-   "   or H for help,"
-   "   or Q to quit."
+"Enter F to read a graph from a file,"
+"   or A to add an edge,"
+"   or R to remove an edge,"
+"   or L to list the neighbours of a vertex,"
+"   or T to initial BFS search the graph from a vertex,"
+"   or S to new BFS search the graph from a vertex,"
+"   or D to for debug data display,"
+"   or P to print Vertex display,"
+"   or H for help,"
+"   or Q to quit."
 
 ---------------------------------
 Reading the graph from a file - F
    You can read the graph data into the program from a file. The file must be of the format
-5		
-0 1 2 99
-1 0 3 99
-2 0 3 4 99
-3 1 2 4 99
-4 2 4 99
+5
+0   1 2 99
+1   0 3 99
+2   0 3 4 99
+3   1 2 4 99
+4   2 4 99
 99
 
 The first line is the number of vertices
@@ -72,7 +73,12 @@ List the neighbors of a vertex - L
    Not developed in this version
 
 ---------------------------------
-Search from a Vertex - S
+Initial BFS from a Vertex - T
+   You will be prompted for a vertex number
+   A Breadth First Search will be displayed
+
+---------------------------------
+Modified BFS from a Vertex and a function pass - S
    You will be prompted for a vertex number
    A Breadth First Search will be displayed
 
